--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">EMMA LN</td>
             <td data-label="City">FOSTER</td>
             <td data-label="Cross Streets">DOLIN HILL RD (0.1 miles)</td>
-            <td data-label="Responding Agencies">Danville VFD</td>
+            <td data-label="Responding Agencies">Danville VFD, Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
