--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
           <tr>
             <td data-label="Time Reported">11:53 AM</td>
             <td data-label="Incident">Welfare Check</td>
-            <td data-label="Street Name">SECOND ST W</td>
+            <td data-label="Street Name">SECOND AVE W</td>
             <td data-label="City">MADISON</td>
-            <td data-label="Cross Streets">FIFTH AVE W (150.6 feet) and SIXTH AVE W (0.1 miles)</td>
+            <td data-label="Cross Streets">THIRD ST W (0.2 miles)</td>
             <td data-label="Responding Agencies">Madison PD</td>
           </tr>
         
