--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">12:24 PM</td>
+            <td data-label="Incident">Welfare Check</td>
+            <td data-label="Street Name">SMITH DR</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">SPRUCE RIVER RD (55.9 feet) and PARK LN (0.1 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">12:18 PM</td>
             <td data-label="Incident">Sick</td>
             <td data-label="Street Name">SHADY LN</td>
