--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <td data-label="Incident">Welfare Check</td>
             <td data-label="Street Name">SMITH DR</td>
             <td data-label="City">DANVILLE</td>
-            <td data-label="Cross Streets">SPRUCE RIVER RD (55.9 feet) and PARK LN (0.1 miles)</td>
+            <td data-label="Cross Streets">PARK LN (137.7 feet)</td>
             <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
