--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
             <tbody>
               
           <tr>
-            <td data-label="Time Reported">12:24 PM</td>
-            <td data-label="Incident">Welfare Check</td>
-            <td data-label="Street Name">SMITH DR</td>
-            <td data-label="City">DANVILLE</td>
-            <td data-label="Cross Streets">PARK LN (124.3 feet) and SPRUCE RIVER RD (180.4 feet)</td>
-            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+            <td data-label="Time Reported">01:12 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name"></td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies"></td>
           </tr>
         
           <tr>
