--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">02:41 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">SPRUCE RIVER RD</td>
+            <td data-label="City">JEFFREY</td>
+            <td data-label="Cross Streets">BIAS BRANCH RD (0.4 miles) and SECOAL CIR (0.2 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">01:12 PM</td>
             <td data-label="Incident">Hit & Run</td>
             <td data-label="Street Name">SIX MILE RD</td>
