--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">02:41 PM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Suspicious Person</td>
             <td data-label="Street Name">SPRUCE RIVER RD</td>
             <td data-label="City">JEFFREY</td>
             <td data-label="Cross Streets">BIAS BRANCH RD (0.4 miles) and SECOAL CIR (0.2 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
