--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">03:00 PM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">NATHAN AVE</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">CENTER ST (83.2 feet) and FRANKLIN AVE (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">02:41 PM</td>
             <td data-label="Incident">Suspicious Person</td>
             <td data-label="Street Name">SPRUCE RIVER RD</td>
