--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">04:04 PM</td>
+            <td data-label="Incident">Traffic Stop</td>
+            <td data-label="Street Name">SMOOT AVE</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">REX ST (126.4 feet) and SECOND ST (151.3 feet)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">03:33 PM</td>
             <td data-label="Incident">Difficulty Breathing</td>
             <td data-label="Street Name">CANDY LN</td>
