--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">05:21 PM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">LICK CREEK RD</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">TAWNEY RD (0.1 miles) and NOMIE DR (0.1 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">04:50 PM</td>
             <td data-label="Incident">Traffic Hazard</td>
             <td data-label="Street Name">FOSTER RD</td>
