--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
           <tr>
             <td data-label="Time Reported">06:00 PM</td>
             <td data-label="Incident">Motor Vehicle Collision</td>
-            <td data-label="Street Name">ROBERT C BYRD FWY NB</td>
+            <td data-label="Street Name">BIG UGLY CREEK RD</td>
             <td data-label="City">CHAPMANVILLE</td>
-            <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Cross Streets">ROBERT C BYRD FWY SB (237.5 feet) and BENDER LN (0.6 miles)</td>
+            <td data-label="Responding Agencies">Danville VFD, Boone County Ambulance Authority, Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
