--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">07:05 PM</td>
+            <td data-label="Incident">Suspicious Vehicle</td>
+            <td data-label="Street Name">HORSE CREEK RD</td>
+            <td data-label="City">MORRISVALE</td>
+            <td data-label="Cross Streets">BREECE LN (0.1 miles) and CAMEO RD (0.3 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">06:54 PM</td>
             <td data-label="Incident">Traffic Stop</td>
             <td data-label="Street Name">BIG UGLY</td>
