--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">10:22 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">38.074429, -81.821194</td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets">SMOOT AVE (0.1 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">09:10 PM</td>
             <td data-label="Incident">Interfacility Transport</td>
             <td data-label="Street Name">MADISON AVE</td>
