--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">12:03 AM</td>
+            <td data-label="Incident">Domestic Violence</td>
+            <td data-label="Street Name">LESLIE DR</td>
+            <td data-label="City">COMFORT</td>
+            <td data-label="Cross Streets">ANGIE DR (80.1 feet) and DEANNA AVE (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">11:56 PM</td>
             <td data-label="Incident">Interfacility Transport</td>
             <td data-label="Street Name">MADISON AVE</td>
