--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">12:52 AM</td>
+            <td data-label="Incident">Noise</td>
+            <td data-label="Street Name">HILL ST</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">LEE AVE (207.3 feet) and MICHAEL LN (0.1 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">12:03 AM</td>
             <td data-label="Incident">Domestic Violence</td>
             <td data-label="Street Name">LESLIE DR</td>
