--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">HILL ST</td>
             <td data-label="City">MADISON</td>
             <td data-label="Cross Streets">LEE AVE (207.3 feet) and MICHAEL LN (0.1 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
