--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">09:50 AM</td>
+            <td data-label="Incident">Stroke</td>
+            <td data-label="Street Name">KAITLYN LN</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">OLD RIVER RD (179.0 feet)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">09:29 AM</td>
             <td data-label="Incident">Transport Back to Residence</td>
             <td data-label="Street Name">MADISON AVE</td>
