--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
         
           <tr>
             <td data-label="Time Reported">11:34 AM</td>
-            <td data-label="Incident"></td>
-            <td data-label="Street Name"></td>
-            <td data-label="City"></td>
-            <td data-label="Cross Streets"></td>
+            <td data-label="Incident">Sex Offense</td>
+            <td data-label="Street Name">NORTH FORK RD</td>
+            <td data-label="City">CHAPMANVILLE</td>
+            <td data-label="Cross Streets">SAUNDERS BRANCH RD (0.4 miles) and ADAM DR (0.5 miles)</td>
             <td data-label="Responding Agencies"></td>
           </tr>
         
