--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <td data-label="Street Name">NORTH FORK RD</td>
             <td data-label="City">CHAPMANVILLE</td>
             <td data-label="Cross Streets">SAUNDERS BRANCH RD (0.4 miles) and ADAM DR (0.5 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
             </tbody>
