--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">12:50 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">CHAMBERS DR</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">KELLY LN (52.4 feet) and SPRUCE RIVER RD (0.1 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">12:13 PM</td>
             <td data-label="Incident">Unconscious</td>
             <td data-label="Street Name">KENMORE DR</td>
