--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">01:32 PM</td>
+            <td data-label="Incident">Attempt to Serve</td>
+            <td data-label="Street Name">STATE ST</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">AVE C (0.1 miles) and BENJAMIN PRICE BRIDGE RD (0.2 miles)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">12:50 PM</td>
             <td data-label="Incident">Emotion Dist Person</td>
             <td data-label="Street Name">CHAMBERS DR</td>
