--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">01:52 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name"></td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">Whitesville EMS</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">12:50 PM</td>
             <td data-label="Incident">Emotion Dist Person</td>
             <td data-label="Street Name">CHAMBERS DR</td>
