--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">01:59 PM</td>
+            <td data-label="Incident">Attempt to Serve</td>
+            <td data-label="Street Name">POND FORK RD</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">DENNIS ST (243.7 feet) and UNEEDA WALK BRG (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">01:52 PM</td>
             <td data-label="Incident">Walk In</td>
             <td data-label="Street Name"></td>
