--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">03:20 PM</td>
+            <td data-label="Incident">Fire - Electrical</td>
+            <td data-label="Street Name">RIGHT HAND FORK FOSTER</td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">Danville VFD, Madison VFD</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">03:04 PM</td>
             <td data-label="Incident">Difficulty Breathing</td>
             <td data-label="Street Name">NORTH FORK RD</td>
