--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
           <tr>
             <td data-label="Time Reported">03:20 PM</td>
             <td data-label="Incident">Fire - Electrical</td>
-            <td data-label="Street Name">RIGHT HAND FORK FOSTER</td>
-            <td data-label="City"></td>
-            <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies">Danville VFD, Madison VFD</td>
+            <td data-label="Street Name">FOSTER RD</td>
+            <td data-label="City">FOSTER</td>
+            <td data-label="Cross Streets">PD FORK RD (0.1 miles) and BROOKSIDE LN (0.3 miles)</td>
+            <td data-label="Responding Agencies">Danville VFD, Madison VFD, Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
