--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">04:40 PM</td>
+            <td data-label="Incident">Fall</td>
+            <td data-label="Street Name">PERDUE LN</td>
+            <td data-label="City">CHAPMANVILLE</td>
+            <td data-label="Cross Streets">ROBERT C BYRD FWY SB (161.0 feet)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">03:04 PM</td>
             <td data-label="Incident">Difficulty Breathing</td>
             <td data-label="Street Name">NORTH FORK RD</td>
