--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">05:15 PM</td>
+            <td data-label="Incident">Difficulty Breathing</td>
+            <td data-label="Street Name">SENG CREEK RD</td>
+            <td data-label="City">WHITESVILLE</td>
+            <td data-label="Cross Streets">IDLEWOOD LN (0.1 miles) and PRIDE LN (0.2 miles)</td>
+            <td data-label="Responding Agencies">Whitesville EMS</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">04:54 PM</td>
             <td data-label="Incident">Injured Person</td>
             <td data-label="Street Name">MEMORY GDNS</td>
