--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">06:15 PM</td>
+            <td data-label="Incident">Assist</td>
+            <td data-label="Street Name">COAL AVE</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">SECOND ST (98.8 feet) and SMOOT AVE E (179.4 feet)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">05:24 PM</td>
             <td data-label="Incident">Chest Pain</td>
             <td data-label="Street Name">KENMORE DR</td>
