--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">08:17 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">CANTLEY BRANCH RD</td>
+            <td data-label="City">FOSTER</td>
+            <td data-label="Cross Streets">DANIEL BOONE PKWY (0.2 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">05:24 PM</td>
             <td data-label="Incident">Chest Pain</td>
             <td data-label="Street Name">KENMORE DR</td>
