--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">COAL RIVER RD</td>
             <td data-label="City">SETH</td>
             <td data-label="Cross Streets">CHURCH HILL RD (48.5 feet) and PRENTER RD (0.1 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">WV State Police</td>
           </tr>
         
             </tbody>
