--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">06:23 AM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">MEADOW FORK RD</td>
+            <td data-label="City">HEWETT</td>
+            <td data-label="Cross Streets">KIRK LN (0.3 miles) and MIKES FORK RD (0.3 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">04:59 AM</td>
             <td data-label="Incident">Chest Pain</td>
             <td data-label="Street Name">RUCKERS ST</td>
