--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">07:23 AM</td>
+            <td data-label="Incident">Traffic Hazard</td>
+            <td data-label="Street Name">KENMORE DR</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">LICK CREEK RD (0.1 miles)</td>
+            <td data-label="Responding Agencies">Danville PD</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">06:34 AM</td>
             <td data-label="Incident">Transport to KDU</td>
             <td data-label="Street Name">KENMORE DR</td>
