--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">10:50 AM</td>
+            <td data-label="Incident">Attempt to Serve</td>
+            <td data-label="Street Name">KIRBYTON RD</td>
+            <td data-label="City">SETH</td>
+            <td data-label="Cross Streets">SUGAR MAPLE LN (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">10:24 AM</td>
             <td data-label="Incident">Fall</td>
             <td data-label="Street Name">ESTEP PL</td>
