--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">11:03 AM</td>
+            <td data-label="Incident">Difficulty Breathing</td>
+            <td data-label="Street Name">COAL RIVER RD</td>
+            <td data-label="City">SETH</td>
+            <td data-label="Cross Streets">PINE DR (81.1 feet) and BRANDY LN (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">10:24 AM</td>
             <td data-label="Incident">Fall</td>
             <td data-label="Street Name">ESTEP PL</td>
