--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">11:11 AM</td>
+            <td data-label="Incident">Attempt to Serve</td>
+            <td data-label="Street Name">JARRELL AVE</td>
+            <td data-label="City">WHITESVILLE</td>
+            <td data-label="Cross Streets">ROGER LN (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">11:03 AM</td>
             <td data-label="Incident">Difficulty Breathing</td>
             <td data-label="Street Name">COAL RIVER RD</td>
