--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">12:33 PM</td>
+            <td data-label="Incident">Traffic Stop</td>
+            <td data-label="Street Name">POND FORK RD</td>
+            <td data-label="City">WHARTON</td>
+            <td data-label="Cross Streets">FIREHOUSE ST (59.6 feet) and PONDCO HOLLOW RD (227.8 feet)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">12:30 PM</td>
             <td data-label="Incident"></td>
             <td data-label="Street Name">KENMORE DR</td>
