--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">02:04 PM</td>
+            <td data-label="Incident">Chest Pain</td>
+            <td data-label="Street Name">WILBARN ST</td>
+            <td data-label="City">TWILIGHT</td>
+            <td data-label="Cross Streets">CHAP RD (0.2 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">01:37 PM</td>
             <td data-label="Incident">Info</td>
             <td data-label="Street Name"></td>
