--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">03:34 PM</td>
+            <td data-label="Incident">Investigations</td>
+            <td data-label="Street Name">POND FORK RD</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">SPRING ST (0.1 miles) and CEMETERY RD (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">02:58 PM</td>
             <td data-label="Incident">Transport Back to Residence</td>
             <td data-label="Street Name"></td>
