--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">03:51 PM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">HOPKINS AVE</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">NOLBERT ST (29.8 feet)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">03:34 PM</td>
             <td data-label="Incident">Investigations</td>
             <td data-label="Street Name">POND FORK RD</td>
