--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">05:09 PM</td>
+            <td data-label="Incident">Trespass</td>
+            <td data-label="Street Name">MCNEELY DR</td>
+            <td data-label="City">JEFFREY</td>
+            <td data-label="Cross Streets">SPRUCE RIVER RD (202.7 feet)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">04:57 PM</td>
             <td data-label="Incident">Fall</td>
             <td data-label="Street Name">STOLLINGS ST</td>
