--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">05:32 PM</td>
+            <td data-label="Incident">Animal Bite</td>
+            <td data-label="Street Name">FOSTER RD</td>
+            <td data-label="City">FOSTER</td>
+            <td data-label="Cross Streets">LORA LN (0.1 miles) and FAIRVIEW DR (0.2 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">05:13 PM</td>
             <td data-label="Incident">Transport Back to Residence</td>
             <td data-label="Street Name">MADISON AVE</td>
