--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">06:07 PM</td>
-            <td data-label="Incident"></td>
-            <td data-label="Street Name"></td>
+            <td data-label="Incident">Traffic Stop</td>
+            <td data-label="Street Name">ROBERT C</td>
             <td data-label="City"></td>
-            <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Cross Streets">BROOKSIDE LN (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
