--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">10:33 PM</td>
+            <td data-label="Incident">Citizen Assist</td>
+            <td data-label="Street Name">MADISON AVE</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">BERWYN ST (243.7 feet) and SMOOT AVE S (0.1 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">07:36 PM</td>
             <td data-label="Incident">Sick</td>
             <td data-label="Street Name">EPLING LN</td>
